--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,7 @@ img {
   height: 4px;
   background-color: var(--accent-color);
   border-radius: 2px;
-  bottom: 0;
+  bottom: -1px;
 }
 
 .icon-mail {
@@ -327,6 +327,9 @@ img {
   position: absolute;
   background-color: rgba(47, 48, 58, 0.8);
   bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .work-bunner-text {
   font-style: normal;
@@ -338,8 +341,6 @@ img {
   text-transform: uppercase;
 
   color: var(--primary-background-color);
-
-  margin: 27px auto;
 }
 
 /* END WORK  */
@@ -661,7 +662,6 @@ img {
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
 }
 
 .list-filters {
@@ -726,7 +726,8 @@ img {
   opacity: 1;
 }
 
-.projects-thumb-link:hover .projects-overlay {
+.projects-thumb-link:hover .projects-overlay,
+.projects-thumb-link:focus .projects-overlay {
   transform: translateY(-100%);
   opacity: 1;
 }
@@ -773,16 +774,23 @@ img {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 20;
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal.is-hidden {
   visibility: hidden;
   opacity: 0;
+  pointer-events: none;
+}
+.modal.is-hidden .modal-inner {
+  transform: translate(-50%, -50%) scale(0.8);
 }
 .modal-inner {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 528px;
   height: 581px;
   background-color: var(--primary-background-color);
