--- a/css/styles.css
+++ b/css/styles.css
@@ -808,6 +808,69 @@ img {
   position: absolute;
   top: 8px;
   right: 8px;
+  cursor: pointer;
 }
 
 /* END MODAL WINDOW */
+
+/* FOOTER INPUT FIELD */
+.footer-input-field {
+  margin-left: auto;
+}
+
+.title-mail {
+  display: block;
+
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  color: var(--primary-background-color);
+}
+.footer-mail {
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: var(--background-color-hero-footer);
+}
+.footer-submit {
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+
+  width: 200px;
+  height: 50px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin-left: 12px;
+  border: none;
+  cursor: pointer;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  color: var(--primary-background-color);
+  padding: 0;
+}
+.icon-send {
+  display: inline-block;
+
+  width: 24px;
+  height: 24px;
+  color: var(--primary-background-color);
+  fill: currentColor;
+  margin-left: 10px;
+}
+.icon-send-item {
+  width: 100%;
+  height: 100%;
+}
+/*  END FOOTER INPUT FIELD */
