--- a/css/styles.css
+++ b/css/styles.css
@@ -813,7 +813,7 @@ img {
   cursor: pointer;
   color: black;
   fill: currentColor;
-  transition: fill 2250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-close-modal {
   width: 100%;
@@ -826,9 +826,10 @@ img {
   fill: currentColor;
 }
 /* Modal Form */
-
+.modal-form {
+  padding: 40px;
+}
 .modal-title {
-  margin-top: 40px;
   margin-bottom: 12px;
   font-style: normal;
   font-weight: 700;
@@ -840,12 +841,13 @@ img {
   color: var(--title-text-color);
 }
 .modal-form-list {
+  margin-bottom: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   padding: 0;
-  margin: 0;
+
   list-style: none;
 }
 .modal-form-items {
@@ -862,25 +864,20 @@ img {
   color: var(--primary-text-color);
   margin-bottom: 10px;
 }
-.modal-form-items:focus-within > .modal-icon {
-  fill: var(--accent-color);
-}
+
 .modal-form-items:not(:last-child) {
-  margin-bottom: 28px;
-}
-.modal-icon {
-  position: absolute;
-  bottom: -6px;
-  left: 15px;
-  width: 18px;
-  height: 18px;
+  margin-bottom: 10px;
 }
 
 .modal-lable {
   position: relative;
-  margin-bottom: 4px;
+
   display: flex;
   flex-direction: column;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
 }
 .modal-name-input {
   width: 448px;
@@ -889,16 +886,9 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
+  margin-top: 4px;
 }
-.modal-icon-name {
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  bottom: 14px;
-  left: 15px;
-  color: var(--title-text-color);
-  fill: currentColor;
-}
+
 .modal-tel-input {
   width: 448px;
   height: 40px;
@@ -906,15 +896,7 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
-}
-.modal-icon-tel {
-  position: absolute;
-  width: 13px;
-  height: 13px;
-  bottom: 13px;
-  left: 14px;
-  color: var(--title-text-color);
-  fill: currentColor;
+  margin-top: 4px;
 }
 
 .modal-mail-input {
@@ -924,22 +906,24 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
+  margin-top: 4px;
 }
-.modal-icon-mail {
+.modal-icon {
   position: absolute;
   width: 15px;
   height: 12px;
   bottom: 14px;
   left: 13px;
-  color: var(--title-text-color);
+}
+.modal-lable:focus-within > .modal-icon {
+  color: var(--accent-color);
   fill: currentColor;
 }
-/* .modal-form-items-textarea {
+.modal-form-items-textarea {
   display: flex;
   flex-direction: column;
   color: var(--primary-text-color);
-  margin-bottom: 10px;
-} */
+}
 .modal-textarea-input {
   display: block;
   width: 448px;
@@ -953,24 +937,13 @@ img {
   outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  margin-bottom: 20px;
-}
-/* .modal-form-list > input {
-  width: 100%;
-  margin: 0;
-  margin-top: 4px;
-  padding: 12px;
-  padding-left: 42px;
-  outline: none;
-
-  border: 1px solid rgba(117, 117, 117, 0.5);
-  border-radius: 4px;
-
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+}
 
 .modal-form-list input:focus-within {
   border-color: var(--accent-color);
+
+  fill: var(--accent-color);
 }
 
 .textarea:focus-within {
@@ -992,27 +965,29 @@ img {
 }
 
 .checkbox {
-  margin-right: 9px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
+
 .checkbox-icon {
-  position: absolute;
-  left: 0;
   display: inline-block;
   width: 16px;
   height: 15px;
   margin-right: 7px;
 
-  border: 2px solid var(--primary-text-color);
-  border-radius: 4px;
+  border: 2px solid var(--title-text-color);
+  border-radius: 2px;
 }
 
 .checkbox:checked + .checkbox-icon {
   background-origin: border-box;
   background-color: var(--accent-color);
-
+  background-image: url(../images/check.svg);
   background-size: contain;
   border-color: var(--accent-color);
 }
+
 .modal-checkbox-link {
   margin-left: 6px;
   font-size: 14px;
@@ -1022,6 +997,10 @@ img {
 }
 
 .modal-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   width: 200px;
   height: 50px;
   margin: 0 auto;
@@ -1087,9 +1066,9 @@ img {
   background-color: var(--background-color-hero-footer);
 }
 .footer-submit {
-  /* display: flex;
+  display: inline-flex;
   align-items: center;
-  justify-content: center; */
+  justify-content: center;
 
   width: 200px;
   height: 50px;
